# gpu-computing-school

./: 404.html  README.md  index.html  mkdocs.yml
.github/workflows/: ci.yml
KOKKOS/: Makefile.inc  README.md  environment.sh  index.html  index.md
KOKKOS/Exercises/: CMakeListsExample.txt  common.cmake
KOKKOS/Exercises/InnerProduct/: CMakeLists.txt  inner_product_cpu.cpp
KOKKOS/Exercises/RiemannSum/: CMakeLists.txt  riemann_sum_functor.cpp  riemann_sum_functor_explicit.cpp  riemann_sum_lambda.cpp  riemann_sum_serial.cpp
KOKKOS/matVecMul/: index.html  index.md
KOKKOS/matVecMul/begin/: main.cpp
KOKKOS/matVecMul/solution/: Makefile  main.cpp
KOKKOS/matVecMulTeamPolicy/: index.html  index.md
KOKKOS/matVecMulTeamPolicy/begin/: Makefile  main.cpp
KOKKOS/matVecMulTeamPolicy/solution/: main.cpp
KOKKOS/vectorAdd/: index.html  index.md
KOKKOS/vectorAdd/begin/: main.cpp
KOKKOS/vectorAdd/solution/: Makefile  main.cpp
SYCL/: CMakeLists.txt  Makefile  Makefile.in  index.html  index.md  matmul.dp.cpp  matmul_opt.dp.cpp  prefix.dp.cpp  prefix_opt.dp.cpp  setenv_leo.sh  stencil.dp.cpp
SYCL/extras/: template.cpp  template.cu
SYCL/globalMatMul/: globalMatMul.cu  index.html  index.md
SYCL/globalMatMul/exercise/: Makefile  globalMatMul.cpp
SYCL/globalMatMul/solution/: globalMatMul.cpp
SYCL/prefixSum/: Makefile  index.html  index.md  prefixSum.cpp  prefixSum.cu
SYCL/stencilUpdate/: index.html  index.md  stencilUpdate.cpp
SYCL/stencilUpdate/exercise/: stencilUpdate.cpp
SYCL/stencilUpdate/solution/: stencilUpdate.cu
SYCL/tiledMatMul/: Makefile  index.html  index.md  tiledMatMul.cpp  tiledMatMul.cu
SYCL/utils/: common_utils.h  cuda_utils.h  sycl_utils.h
docs/: index.html  index.md
search/: search_index.json
